content/_generated-doc/3.27/config/quarkus-container-image-jib.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus-jib-base-jvm-image]] [.property-path]##link:#quarkus-container-image-jib_quarkus-jib-base-jvm-image[`quarkus.jib.base-jvm-image`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jib.base-jvm-image+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The base image to be used when a container image is being produced for the jar build. When the application is built against Java 21 or higher, `registry.access.redhat.com/ubi9/openjdk-21-runtime:1.23` is used as the default. Otherwise `registry.access.redhat.com/ubi9/openjdk-17-runtime:1.23` is used as the default.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JIB_BASE_JVM_IMAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JIB_BASE_JVM_IMAGE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus-jib-base-native-image]] [.property-path]##link:#quarkus-container-image-jib_quarkus-jib-base-native-image[`quarkus.jib.base-native-image`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jib.base-native-image+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The base image to be used when a container image is being produced for the native binary build. The default is "quay.io/quarkus/ubi9-quarkus-micro-image:2.0". You can also use "registry.access.redhat.com/ubi9/ubi-minimal" which is a bigger base image, but provide more built-in utilities such as the microdnf package manager.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JIB_BASE_NATIVE_IMAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JIB_BASE_NATIVE_IMAGE+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++quay.io/quarkus/ubi9-quarkus-micro-image:2.0+++`

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus-jib-jvm-arguments]] [.property-path]##link:#quarkus-container-image-jib_quarkus-jib-jvm-arguments[`quarkus.jib.jvm-arguments`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jib.jvm-arguments+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The JVM arguments to pass to the JVM when starting the application


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JIB_JVM_ARGUMENTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JIB_JVM_ARGUMENTS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|`+++-Djava.util.logging.manager=org.jboss.logmanager.LogManager+++`

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus-jib-jvm-additional-arguments]] [.property-path]##link:#quarkus-container-image-jib_quarkus-jib-jvm-additional-arguments[`quarkus.jib.jvm-additional-arguments`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jib.jvm-additional-arguments+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Additional JVM arguments to pass to the JVM when starting the application


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JIB_JVM_ADDITIONAL_ARGUMENTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JIB_JVM_ADDITIONAL_ARGUMENTS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus-jib-native-arguments]] [.property-path]##link:#quarkus-container-image-jib_quarkus-jib-native-arguments[`quarkus.jib.native-arguments`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jib.native-arguments+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Additional arguments to pass when starting the native application


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JIB_NATIVE_ARGUMENTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JIB_NATIVE_ARGUMENTS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus-jib-jvm-entrypoint]] [.property-path]##link:#quarkus-container-image-jib_quarkus-jib-jvm-entrypoint[`quarkus.jib.jvm-entrypoint`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jib.jvm-entrypoint+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If this is set, then it will be used as the entry point of the container image. There are a few things to be aware of when creating an entry point

 - Entrypoint "INHERIT" means to inherit entrypoint from base image, `jvmArguments` field is used for arguments
 - A valid entrypoint is jar package specific (see `quarkus.package.jar.type`)
 - A valid entrypoint depends on the location of both the launching scripts and the application jar file. To that end it's helpful to remember that when `fast-jar` packaging is used (the default), all necessary application jars are added to the `/work` directory and that the same directory is also used as the working directory. When `legacy-jar` or `uber-jar` are used, the application jars are unpacked under the `/app` directory and that directory is used as the working directory.
 - Even if the `jvmArguments` field is set, it is ignored completely unless entrypoint is "INHERIT"

When this is not set, a proper default entrypoint will be constructed. As a final note, a very useful tool for inspecting container image layers that can greatly aid when debugging problems with endpoints is link:https://github.com/wagoodman/dive[dive]


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JIB_JVM_ENTRYPOINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JIB_JVM_ENTRYPOINT+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus-jib-native-entrypoint]] [.property-path]##link:#quarkus-container-image-jib_quarkus-jib-native-entrypoint[`quarkus.jib.native-entrypoint`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jib.native-entrypoint+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If this is set, then it will be used as the entry point of the container image. There are a few things to be aware of when creating an entry point

 - Entrypoint "INHERIT" means to inherit entrypoint from base image, `nativeArguments` field is used for arguments
 - A valid entrypoint depends on the location of both the launching scripts and the native binary file. To that end it's helpful to remember that the native application is added to the `/work` directory and that and the same directory is also used as the working directory
 - Even if the `nativeArguments` field is set, it is ignored completely unless entrypoint is "INHERIT"

When this is not set, a proper default entrypoint will be constructed. As a final note, a very useful tool for inspecting container image layers that can greatly aid when debugging problems with endpoints is link:https://github.com/wagoodman/dive[dive]


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JIB_NATIVE_ENTRYPOINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JIB_NATIVE_ENTRYPOINT+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus-jib-environment-variables-environment-variable-name]] [.property-path]##link:#quarkus-container-image-jib_quarkus-jib-environment-variables-environment-variable-name[`quarkus.jib.environment-variables."environment-variable-name"`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jib.environment-variables."environment-variable-name"+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Environment variables to add to the container image


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JIB_ENVIRONMENT_VARIABLES__ENVIRONMENT_VARIABLE_NAME_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JIB_ENVIRONMENT_VARIABLES__ENVIRONMENT_VARIABLE_NAME_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus-jib-base-registry-username]] [.property-path]##link:#quarkus-container-image-jib_quarkus-jib-base-registry-username[`quarkus.jib.base-registry-username`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jib.base-registry-username+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The username to use to authenticate with the registry used to pull the base JVM image


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JIB_BASE_REGISTRY_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JIB_BASE_REGISTRY_USERNAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus-jib-base-registry-password]] [.property-path]##link:#quarkus-container-image-jib_quarkus-jib-base-registry-password[`quarkus.jib.base-registry-password`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jib.base-registry-password+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The password to use to authenticate with the registry used to pull the base JVM image


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JIB_BASE_REGISTRY_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JIB_BASE_REGISTRY_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus-jib-ports]] [.property-path]##link:#quarkus-container-image-jib_quarkus-jib-ports[`quarkus.jib.ports`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jib.ports+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The ports to expose


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JIB_PORTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JIB_PORTS+++`
endif::add-copy-button-to-env-var[]
--
|list of int
|`+++${quarkus.http.port:8080}+++`

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus-jib-user]] [.property-path]##link:#quarkus-container-image-jib_quarkus-jib-user[`quarkus.jib.user`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jib.user+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The user to use in generated image


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JIB_USER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JIB_USER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus-jib-working-directory]] [.property-path]##link:#quarkus-container-image-jib_quarkus-jib-working-directory[`quarkus.jib.working-directory`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jib.working-directory+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The working directory to use in the generated image. The default value is chosen to work in accordance with the default base image.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JIB_WORKING_DIRECTORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JIB_WORKING_DIRECTORY+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++/home/jboss+++`

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus-jib-always-cache-base-image]] [.property-path]##link:#quarkus-container-image-jib_quarkus-jib-always-cache-base-image[`quarkus.jib.always-cache-base-image`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jib.always-cache-base-image+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Controls the optimization which skips downloading base image layers that exist in a target registry. If the user does not set this property, then read as false. If `true`, base image layers are always pulled and cached. If `false`, base image layers will not be pulled/cached if they already exist on the target registry.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JIB_ALWAYS_CACHE_BASE_IMAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JIB_ALWAYS_CACHE_BASE_IMAGE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus-jib-platforms]] [.property-path]##link:#quarkus-container-image-jib_quarkus-jib-platforms[`quarkus.jib.platforms`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jib.platforms+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
List of target platforms. Each platform is defined using the pattern:

```
<os>\|<arch>[/variant]\|<os>/<arch>[/variant]
```

for example:

```
linux/amd64,linux/arm64/v8
```

If not specified, OS default is linux and architecture default is `amd64`. If more than one platform is configured, it is important to note that the base image has to be a Docker manifest or an OCI image index containing a version of each chosen platform. The feature does not work with native images, as cross-compilation is not supported. This configuration is based on an incubating feature of Jib. See link:https://github.com/GoogleContainerTools/jib/blob/master/docs/faq.md#how-do-i-specify-a-platform-in-the-manifest-list-or-oci-index-of-a-base-image[Jib FAQ] for more information.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JIB_PLATFORMS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JIB_PLATFORMS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus-jib-image-digest-file]] [.property-path]##link:#quarkus-container-image-jib_quarkus-jib-image-digest-file[`quarkus.jib.image-digest-file`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jib.image-digest-file+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The path of a file in which the digest of the generated image will be written. If the path is relative, the base path is the output directory of the build tool.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JIB_IMAGE_DIGEST_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JIB_IMAGE_DIGEST_FILE+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++jib-image.digest+++`

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus-jib-image-id-file]] [.property-path]##link:#quarkus-container-image-jib_quarkus-jib-image-id-file[`quarkus.jib.image-id-file`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jib.image-id-file+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The path of a file in which the id of the generated image will be written. If the path is relative, the base path is the output directory of the build tool.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JIB_IMAGE_ID_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JIB_IMAGE_ID_FILE+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++jib-image.id+++`

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus-jib-offline-mode]] [.property-path]##link:#quarkus-container-image-jib_quarkus-jib-offline-mode[`quarkus.jib.offline-mode`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jib.offline-mode+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Whether, or not to operate offline.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JIB_OFFLINE_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JIB_OFFLINE_MODE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus-jib-docker-executable-name]] [.property-path]##link:#quarkus-container-image-jib_quarkus-jib-docker-executable-name[`quarkus.jib.docker-executable-name`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jib.docker-executable-name+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Name of binary used to execute the docker commands. This is only used by Jib when the container image is being built locally.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JIB_DOCKER_EXECUTABLE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JIB_DOCKER_EXECUTABLE_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus-jib-docker-environment-environment-variable-name]] [.property-path]##link:#quarkus-container-image-jib_quarkus-jib-docker-environment-environment-variable-name[`quarkus.jib.docker-environment."environment-variable-name"`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jib.docker-environment."environment-variable-name"+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Sets environment variables used by the Docker executable. This is only used by Jib when the container image is being built locally.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JIB_DOCKER_ENVIRONMENT__ENVIRONMENT_VARIABLE_NAME_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JIB_DOCKER_ENVIRONMENT__ENVIRONMENT_VARIABLE_NAME_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus-jib-use-current-timestamp]] [.property-path]##link:#quarkus-container-image-jib_quarkus-jib-use-current-timestamp[`quarkus.jib.use-current-timestamp`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jib.use-current-timestamp+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Whether to set the creation time to the actual build time. Otherwise, the creation time will be set to the Unix epoch (00:00:00, January 1st, 1970 in UTC). See link:https://github.com/GoogleContainerTools/jib/blob/master/docs/faq.md#why-is-my-image-created-48-years-ago[Jib FAQ] for more information


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JIB_USE_CURRENT_TIMESTAMP+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JIB_USE_CURRENT_TIMESTAMP+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus-jib-use-current-timestamp-file-modification]] [.property-path]##link:#quarkus-container-image-jib_quarkus-jib-use-current-timestamp-file-modification[`quarkus.jib.use-current-timestamp-file-modification`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jib.use-current-timestamp-file-modification+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Whether to set the modification time (last modified time) of the files put by Jib in the image to the actual build time. Otherwise, the modification time will be set to the Unix epoch (00:00:00, January 1st, 1970 in UTC). If the modification time is constant (flag is set to false so Unix epoch is used) across two consecutive builds, the docker layer sha256 digest will be different only if the actual files added by Jib to the docker layer were changed. More exactly, having 2 consecutive builds will generate different docker layers only if the actual content of the files within the docker layer was changed. If the current timestamp is used the sha256 digest of the docker layer will always be different even if the content of the files didn't change.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JIB_USE_CURRENT_TIMESTAMP_FILE_MODIFICATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JIB_USE_CURRENT_TIMESTAMP_FILE_MODIFICATION+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus-jib-base-image-layers-cache]] [.property-path]##link:#quarkus-container-image-jib_quarkus-jib-base-image-layers-cache[`quarkus.jib.base-image-layers-cache`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jib.base-image-layers-cache+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The directory to use for caching base image layers. If not specified, the Jib default directory is used.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JIB_BASE_IMAGE_LAYERS_CACHE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JIB_BASE_IMAGE_LAYERS_CACHE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus-jib-application-layers-cache]] [.property-path]##link:#quarkus-container-image-jib_quarkus-jib-application-layers-cache[`quarkus.jib.application-layers-cache`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.jib.application-layers-cache+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The directory to use for caching application layers. If not specified, the Jib default directory is used.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JIB_APPLICATION_LAYERS_CACHE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JIB_APPLICATION_LAYERS_CACHE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

|===

